# graphs-bench

./: .gitignore  ALGORITHM.md  ARCHIVE_ORG.md  ARTIFACT.md  CITATION.cff  Cargo.toml  LICENSE  README.md
.cursor/skills/lean4/: SKILL.md
.cursor/skills/lean4/scripts/: README.md  TESTING.md  analyze_let_usage.py  check_axioms_inline.sh  cycle_tracker.sh  find_exact_candidates.py  find_golfable.py  find_usages.sh  minimize_imports.py  parse_command_args.py  parse_lean_errors.py  solver_cascade.py  sorry_analyzer.py  test_apply_exact_chains.py  try_exact_at_step.py  unused_declarations.sh
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/plugin/: lean4-env.js
formal/: AXIOMS.md  FUTURE_WORK.md  PROOF_DEPENDENCIES.md  README.md  RUST_DIJKSTRA_REFINEMENT.md  VERIFICATION.md
formal/fixtures/dijkstra/: diamond_with_ties.json  single_vertex.json  tiny_chain.json  unreachable_vertices.json
formal/lean/: Sssp.lean  lake-manifest.json  lakefile.toml
formal/lean/Sssp/: BMSSP.lean  BaseCase.lean  DStruct.lean  Dijkstra.lean  Distance.lean  FindPivots.lean  Graph.lean  Main.lean  Path.lean
formal/lean/Sssp/Algo/: Dijkstra.lean
formal/lean/Sssp/Fixtures/: Correctness.lean  Dijkstra.lean  Graph.lean
formal/lean/Sssp/Refine/: Bridge.lean  Dijkstra.lean  GraphBridge.lean  HeapBridge.lean  HeapSimulation.lean  (+5 more)
formal/paper/: README.md
formal/scripts/: check-fixtures.sh
paper/: .gitignore  Makefile  README.md  paper.tex  refs.bib
scripts/: make-archive.sh
src/: bmssp.rs  dijkstra.rs  dstruct.rs  graph.rs  lib.rs  main.rs  random_graph.rs
(+1 files in other folders)
