[package]
name = "graphs-bench"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust benchmarks and Lean artifacts for directed single-source shortest paths"
repository = "https://github.com/ilerik/graphs-bench"
readme = "README.md"
publish = false

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
